<resources>
    <string name="app_name">Leaderboard</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ Leaders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github">Project on Github</string>
    <string name="submitbutton">Submit</string>
    <string name="project_submisssion">Project Submission</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure</string>
</resources>