<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/black"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".SubmitProjectActivity">

        <ImageView
            android:id="@+id/top_image"
            android:layout_width="333dp"
            android:layout_height="84dp"
            android:layout_marginTop="40dp"
            android:background="#00000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.205"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gads" />

        <TextView
            android:id="@+id/text_project_submission"
            android:layout_width="226dp"
            android:layout_height="30dp"
            android:layout_marginTop="60dp"
            android:background="#00000000"
            android:text="@string/project_submisssion"
            android:textAlignment="center"
            android:textColor="#FFC107"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_image"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="180dp"
            android:layout_height="47dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="56dp"
            android:autofillHints=""
            android:background="@drawable/rounded_button"
            android:baselineAligned="false"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_project_submission"
            android:layout_marginLeft="20dp" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="180dp"
            android:layout_height="47dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/editTextFirstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.882"
            app:layout_constraintStart_toEndOf="@+id/editTextFirstName"
            android:layout_marginRight="16dp" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="367dp"
            android:layout_height="59dp"
            android:layout_marginTop="168dp"
            android:autofillHints=""
            android:background="@drawable/rounded_button"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_project_submission" />

        <EditText
            android:id="@+id/editTextProjectOnGitHub"
            android:layout_width="367dp"
            android:layout_height="59dp"

            android:layout_marginTop="28dp"
            android:autofillHints=""
            android:background="@drawable/rounded_button"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/project_on_github"
            android:inputType="textUri"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

        <Button
            android:id="@+id/submit_project_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button"

            android:text="@string/submitbutton"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextProjectOnGitHub"
            app:layout_constraintVertical_bias="0.582" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>